tests/ui/associated-type-bounds/return-type-notation/path-higher-ranked.stderr
warning: the feature `return_type_notation` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/path-higher-ranked.rs:1:12
   |
LL | #![feature(return_type_notation)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #109417 <https://github.com/rust-lang/rust/issues/109417> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0212]: cannot use the associated function of a trait with uninferred generic parameters
  --> $DIR/path-higher-ranked.rs:12:5
   |
LL |     T::method(..): Send,
   |     ^^^^^^^^^^^^^
   |
help: use a fully qualified path with inferred lifetimes
   |
LL |     <T as A<'_>>::method(..): Send,
   |     ~~~~~~~~~~~~~~

error[E0212]: cannot use the associated function of a trait with uninferred generic parameters
  --> $DIR/path-higher-ranked.rs:20:5
   |
LL |     T::method(..): Send,
   |     ^^^^^^^^^^^^^
   |
help: use a fully qualified path with inferred lifetimes
   |
LL |     <T as A<'_>>::method(..): Send,
   |     ~~~~~~~~~~~~~~

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0212`.
